--- a/4-advanced-css/24_sass/style.css
+++ b/4-advanced-css/24_sass/style.css
@@ -1,7 +1,6 @@
-.box {
-  width: 62.5%;
-  height: 400px;
-  background-color: blue;
+body {
+  font-size: 18px;
+  color: #c2bbbd;
 }
 
 /*# sourceMappingURL=style.css.map */
