--- a/4-advanced-css/25_less/styles.less
+++ b/4-advanced-css/25_less/styles.less
@@ -1,3 +1,8 @@
-body {
-  font-family: sans-serif;
+@import "common";
+@import "common.css";
+
+.box {
+  @media (min-width: #sizes[mobile]) {
+    width: 300px;
+  }
 }
