--- a/4-advanced-css/zadatak_03/style/style.css
+++ b/4-advanced-css/zadatak_03/style/style.css
@@ -1,28 +1,41 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
+  font-family: sans-serif;
+  margin: 0 auto;
   padding: 0;
+  max-width: 1024px;
 }
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-  padding: 20px;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 3rem;
 }
 
 .gallery-item {
   border: 1px solid #ddd;
-  padding: 10px;
+  border-radius: 10%;
   text-align: center;
 }
 
 img {
+  background-color: lightblue;
   max-width: 100%;
-  height: auto;
+  border-top-left-radius: 10%;
+  border-top-right-radius: 10%;
 }
 
-h3,
-p {
+h3 {
   margin: 10px 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .gallery {
+    grid-template-columns: 1fr;
+  }
 }
