--- a/5-website-building/assignment-01/css/style.css
+++ b/5-website-building/assignment-01/css/style.css
@@ -6,6 +6,20 @@
   margin-bottom: 5px;
 }
 
+#navigation-links a {
+  color: darkgray;
+  text-decoration: none;
+}
+
+#navigation-links a:hover {
+  color: black;
+}
+
+#navigation-links a:active {
+  text-decoration: underline;
+  text-decoration-color: darkgray;
+}
+
 /************************************************ HERO SECTION *********************************************/
 /* height: 100vh;
 background-image: url(../imgs/hero.jpg);
@@ -19,49 +33,77 @@ background-size: contain; */
 
 #hero-label {
   /* background-color: #63c38f; */
+  /* background-color: #63c39082; */
   background-color: #3f78598c;
+  margin: 0;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
 }
-  
+
 
 /** Extra Small <576px **/
 @media (max-width: 575px) {
+  
+  
   #hero-label {
-
     font-size: 8px;
   }
 }
 
 /** Small ≥576px **/
-@media (min-width: 576px){
-  #hero-label {
-
-  }
+@media (min-width: 576px) {
+  #hero-label {}
 }
 
 /** Medium ≥768px **/
-@media (min-width: 768px){
-  #hero-label {
-
-  }
+@media (min-width: 768px) {
+  #hero-label {}
 }
 
 /** Large ≥992px **/
-@media (min-width: 992px){
-  #hero-label {
-
-    }
+@media (min-width: 992px) {
+  #hero-label {}
 }
 
 /** Extra Large ≥1200px **/
-@media (min-width: 1200px){
+@media (min-width: 1200px) {
   #hero-label {
+    /* top: 80px;
+    left: 90px; */
+    /* p-4 fw-bold */
   }
 }
 
-/* top: 80px;
-left: 90px; */
-  /* p-4 fw-bold */
+
+/************************************************ INTRO SECTION *********************************************/
+
+
+/************************************************ RECENT SECTION *********************************************/
+
+#recent-section a,
+#blog-section a {
+  color: black;
+  text-decoration: none;
+}
+
+#recent-section a:hover,
+#blog-section a:hover {
+  color: darkgray;
+}
+
+#recent-section a:active,
+#blog-section a:active {
+  color: black;
+  text-decoration: underline;
+  text-decoration-color: darkgray;
+}
+
+/************************************************ BLOG SECTION *********************************************/
+
+
+/************************************************ FOOTER  *********************************************/
+footer {
+  background-color: black;
+}
