--- a/5-website-building/coffee-shop_/css/style.css
+++ b/5-website-building/coffee-shop_/css/style.css
@@ -69,7 +69,7 @@ a:visited {
     display: block;
     width: 64px;
     /* color: white; */
-    z-index: 3;
+    /* z-index: 3; */
 }
 
 
@@ -107,6 +107,11 @@ a:visited {
 }
 
 @media (max-width: 768px) {
+
+    #about-bg-2 {
+        z-index: -1;
+    }
+
     #about-bg-2::before {
         content: "";
         position: absolute;
@@ -115,6 +120,7 @@ a:visited {
         top: 0;
         bottom: 0;
         background: #080707bd;
+        z-index: -1;
     }
 }
 
@@ -146,13 +152,9 @@ a:visited {
     display: none;
 }
 
-/* #mobile-menu  */
-
 a {
     color: white;
 }
-
-/* #mobile-menu  */
 
 a:hover {
     color: rgb(175, 171, 171);
@@ -180,6 +182,19 @@ a:hover {
 
 /************************************************ MAP SECTION *********************************************/
 
+#map {
+    height: 480px;
+}
+
+#map-section a {
+    color: black;
+}
+
+#map > div.leaflet-control-container > div.leaflet-bottom.leaflet-right > div a {
+    color: #0078A8;
+}
+
+
 /************************************************ FOOTER *********************************************/
 
 footer {
@@ -194,10 +209,9 @@ footer a i {
     footer {
         text-align: center;
     }
-    
+
     #social-icons {
         text-align: center !important;
         margin-top: 8px;
     }
 }
-
